# ig_trading_api

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.3.0.md  config.default.yaml  run_tests.sh
src/: common.rs  lib.rs  main.rs  rest_api.rs  rest_client.rs  rest_models.rs  rest_regex.rs  streaming_api.rs
tests/: integration_tests.rs  rest_api_integration_tests.rs
