[package]
name = "ig-trading-api"
version = "0.1.0"
edition = "2021"
authors = ["Daniel López Azaña <daniloaz@gmail.com>"]
description = "A Rust client for the REST and Streaming APIs from IG.com."
license = "GPL 3.0"
repository = "https://github.com/daniloaz/ig-trading-api"
documentation = "https://github.com/daniloaz/ig-trading-api#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0", features = ["serde"] }
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0"
serde_yaml = "0"