[package]
name = "ig_trading_api"
version = "0.2.2"
edition = "2021"
authors = ["Daniel López Azaña <daniloaz@gmail.com>"]
description = "A Rust client for the REST and Streaming APIs from IG.com."
license = "GPL-3.0-only"
homepage = "https://www.daniloaz.com/en/"
repository = "https://github.com/daniloaz/ig-trading-api"
documentation = "https://github.com/daniloaz/ig-trading-api#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0"
colored = "2"
lightstreamer-client = { git = "https://github.com/PunkbotTrading/lightstreamer-client", branch = "main" }
chrono = { version = "0", features = ["serde"] }
once_cell = "1"
regex = "1"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0"
serde_urlencoded = "0"
serde_yaml = "0"
signal-hook = "0"
